# mc

./: .gitignore  CMakeLists.txt
edit/: edit.c
lib/: CMakeLists.txt  global.h  strutil.h  util.c  util.h
lib/event/: CMakeLists.txt
lib/filehighlight/: CMakeLists.txt
lib/mcconfig/: CMakeLists.txt  common.c
lib/search/: CMakeLists.txt
lib/skin/: CMakeLists.txt
lib/strutil/: CMakeLists.txt
lib/tty/: CMakeLists.txt  key.c
lib/vfs/: CMakeLists.txt  direntry.c  interface.c  path.c  vfs.c  vfs.h
lib/widget/: CMakeLists.txt  dialog.c  input.h  input_complete.c  quick.c  quick.h  widget-common.h  wtools.c
src/: CMakeLists.txt  execute.c  main.c  main.h  setup.c  subshell.c
src/diffviewer/: CMakeLists.txt  search.c  ydiff.c
src/editor/: CMakeLists.txt  edit.c  editcmd.c  editcmd_dialogs.c  editdraw.c  editoptions.c  syntax.c
src/filemanager/: CMakeLists.txt  boxes.c  cmd.c  command.c  dir.c  ext.c  file.c  filegui.c  fileopctx.c  find.c  hotlist.c  layout.c  layout.h  midnight.c  option.c  panel.c  panelize.c  tree.c  treestore.c  usermenu.c
src/subshell/: CMakeLists.txt
src/vfs/: CMakeLists.txt
src/vfs/cpio/: cpio.c
src/vfs/extfs/: extfs.c
src/vfs/fish/: fish.c
src/vfs/ftpfs/: ftpfs.c
src/vfs/sfs/: sfs.c
src/viewer/: CMakeLists.txt  dialogs.c  mcviewer.c
