cmake_minimum_required(VERSION 3.6)
project(mc LANGUAGES C)

add_definitions(-DSYSCONFDIR=\"${CMAKE_INSTALL_PREFIX}/etc/mc\")
add_definitions(-DLIBEXECDIR=\"${CMAKE_INSTALL_PREFIX}/usr/local/libexec/mc\")
add_definitions(-DDATADIR=\"${CMAKE_INSTALL_PREFIX}/usr/local/libexec/mc\")
add_definitions(-DLOCALEDIR=\"${CMAKE_INSTALL_PREFIX}/share/locale\")
add_definitions(-DEXTHELPERSDIR=\"${CMAKE_INSTALL_PREFIX}/libexec/mc/ext.d/\")
include_directories(.)
include_directories(/usr/local/lib/glib-2.0/include)
include_directories(/usr/local/include/glib-2.0)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
add_subdirectory(lib)
add_subdirectory(src)