add_library(mc-widget STATIC
        button.c
        button.h
        buttonbar.c
        buttonbar.h
        check.c
        check.h
        dialog-switch.c
        dialog-switch.h
        dialog.c
        dialog.h
        gauge.c
        gauge.h
        groupbox.c
        groupbox.h
        history.c
        history.h
        hline.c
        hline.h
        input.c
        input.h
        input_complete.c
        input_complete.h
        label.c
        label.h
        listbox-window.c
        listbox-window.h
        listbox.c
        listbox.h
        menu.c
        menu.h
        mouse.c
        mouse.h
        quick.c
        quick.h
        radio.c
        radio.h
        widget-common.c
        widget-common.h
        wtools.c
        wtools.h
        )
target_include_directories(mc-widget PRIVATE ../..)
target_link_libraries(mc-widget PUBLIC glib-2.0)