add_library(mc-editor STATIC
        bookmark.c
        choosesyntax.c
        edit-impl.h
        edit.c
        edit.h
        editbuffer.c
        editbuffer.h
        editcmd.c
        editcmd_dialogs.c
        editcmd_dialogs.h
        editdraw.c
        editmenu.c
        editoptions.c
        editwidget.c
        editwidget.h
        etags.c
        etags.h
        format.c
        spell.c
        spell.h
        spell_dialogs.c
        spell_dialogs.h
        syntax.c
        )