add_library(mc-filemanager STATIC
        achown.c
        achown.h
        boxes.c
        boxes.h
        chmod.c
        chmod.h
        chown.c
        chown.h
        cmd.c
        cmd.h
        command.c
        command.h
        dir.c
        dir.h
        ext.c
        ext.h
        file.c
        file.h
        filegui.c
        filegui.h
        filenot.c
        filenot.h
        fileopctx.c
        fileopctx.h
        find.c
        find.h
        hotlist.c
        hotlist.h
        info.c
        info.h
        ioblksize.h
        layout.c
        layout.h
        listmode.c
        listmode.h
        midnight.c
        midnight.h
        mountlist.c
        mountlist.h
        panel.c
        panel.h
        panelize.c
        panelize.h
        tree.c
        tree.h
        treestore.c
        treestore.h
        )