add_library(mc-viewer STATIC
        actions_cmd.c
        ascii.c
        coord_cache.c
        datasource.c
        dialogs.c
        display.c
        growbuf.c
        hex.c
        inlines.h
        internal.h
        lib.c
        mcviewer.c
        mcviewer.h
        move.c
        nroff.c
        search.c
        )